@@ -9,6 +9,8 @@
 	- addition of setStyle method to Endpoint.
 	
 	- added optional referenceParams argument to jsPlumb.connect; use this to supply shared info between many connections.
+	
+	- added optional referenceParams argument to jsPlumb.addEndpoint; use this to supply shared info between many endpoint additions.
 
 * 1.2.5
 
